force-app/main/default/objects/Produto_Filho__c/Produto_Filho__c.object-meta.xml
<CustomObject>
    <label>Produto Filho</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Filhos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>