force-app/main/default/objects/Produto_Filho__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <formula>Produto_Filho__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código</label>
    <type>Text</type>
</CustomField>