force-app/main/default/objects/Produto_Filho__c/fields/Codigo_do_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_Fabricante__c</fullName>
    <formula>Produto_Filho__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo do Fabricante</label>
    <type>Text</type>
</CustomField>