force-app/main/default/objects/Produto_Filho__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <formula>Produto_Filho__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descricao</label>
    <type>Text</type>
</CustomField>