force-app/main/default/objects/Produto_Filho__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <formula>TEXT(Produto_Filho__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia</label>
    <type>Text</type>
</CustomField>