force-app/main/default/objects/Produto_Filho__c/fields/Id_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Id_do_produto__c</fullName>
    <formula>Produto_Filho__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id do produto</label>
    <type>Text</type>
</CustomField>