force-app/main/default/objects/Produto_Filho__c/fields/Nome_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_produto__c</fullName>
    <formula>Produto_Filho__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do produto</label>
    <type>Text</type>
</CustomField>