force-app/main/default/objects/Produto_Filho__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <formula>Produto_Pai__r.Valor_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>