force-app/main/default/objects/Produto_Filho__c/fields/Produto_Filho__c.field-meta.xml
<CustomField>
    <fullName>Produto_Filho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Filho</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Filhos (Produto Filho)</relationshipLabel>
    <relationshipName>Produtos_Filhos1</relationshipName>
    <type>Lookup</type>
</CustomField>