force-app/main/default/objects/Produto_Filho__c/fields/Produto_Pai__c.field-meta.xml
<CustomField>
    <fullName>Produto_Pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Pai</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Filhos</relationshipLabel>
    <relationshipName>Produtos_Filhos</relationshipName>
    <type>Lookup</type>
</CustomField>