force-app/main/default/objects/Produto_Filho__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantidade</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>