force-app/main/default/objects/Produto_Filho__c/fields/Status_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Status_Commerce__c</fullName>
    <formula>&quot;Publish&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Commerce</label>
    <type>Text</type>
</CustomField>