force-app/main/default/objects/Produto_Filho__c/fields/Url_da_imagem__c.field-meta.xml
<CustomField>
    <fullName>Url_da_imagem__c</fullName>
    <formula>Produto_Filho__r.URL_da_Imagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Url da imagem</label>
    <type>Text</type>
</CustomField>