force-app/main/default/objects/Produto_Filho__c/fields/ValorUnitario__c.field-meta.xml
<CustomField>
    <fullName>ValorUnitario__c</fullName>
    <formula>Produto_Filho__r.Valor_de_Venda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>