force-app/main/default/objects/Produto_Filho__c/validationRules/Filho_dele_mesmo.validationRule-meta.xml
<ValidationRule>
    <fullName>Filho_dele_mesmo</fullName>
    <active>true</active>
    <errorConditionFormula>Produto_Filho__c =  Produto_Pai__c</errorConditionFormula>
    <errorMessage>Um produto não pode ser filho dele mesmo.</errorMessage>
</ValidationRule>